--- a/bingobingo/bingo75.htm
+++ b/bingobingo/bingo75.htm
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
     <script src="js/jquery-3.0.0.js"></script>
- 	<!--Bootstrap Javascript-->
- 	<script src="js/bootstrap.min.js"></script>
+    <!--Bootstrap Javascript-->
+    <script src="js/bootstrap.min.js"></script>
     <title>Bingo 75</title>
 
     <style>
@@ -146,20 +146,27 @@
     </div>
     </div>
     <script>
-            window.onload = function() {}
+            window.onload = function() {
+                for (var i = 0; i < 75; i++) {
+                    if(getCookie("h" + i) != ""){
+                        document.getElementsByTagName("td")[i].style.backgroundColor = getCookie("h" + i);
+                    }
+                }
+            }
 
             function changeColor(i) {
-                if (document.getElementsByTagName("td")[i].style.backgroundColor != "#ff4d4d") {
-                    document.getElementsByTagName("td")[i].style.backgroundColor = "#ff4d4d";
-                } else {
-                    document.getElementsByTagName("td")[i].style.backgroundColor = "white";
-                }
+                // if (document.getElementsByTagName("td")[i].style.backgroundColor != "#ff4d4d") {
+                //     document.getElementsByTagName("td")[i].style.backgroundColor = "#ff4d4d";
+                // } else {
+                //     document.getElementsByTagName("td")[i].style.backgroundColor = "white";
+                // }
             }
 
             function myReset() {
                 var i = 0;
                 for (i = 0; i < 75; i++) {
                     document.getElementsByTagName("td")[i].style.backgroundColor = "white";
+                    document.cookie = "h" + i + "=" + "white";
                 }
                 document.getElementById("b1").innerHTML = "抽籤";
             }
@@ -178,6 +185,7 @@
                     if (document.getElementsByTagName("td")[i].style.backgroundColor != "#ff4d4d") {
                         if (r == 0) {
                             document.getElementsByTagName("td")[i].style.backgroundColor = "#ff4d4d";
+                            document.cookie = "h" + i + "=" + "#ff4d4d";
                             document.getElementById("b1").innerHTML = "抽籤(" + (i + 1) + ")";
                             break;
                         } else {
@@ -186,6 +194,6 @@
                     }
                 }
             }
-            </script>
+    </script>
 </body>
 </html>
