--- a/bingobingo/bingo75.htm
+++ b/bingobingo/bingo75.htm
@@ -30,8 +30,7 @@
 </head>
 
 <body>
-    <button class="btn btn-primary" id="b1" style="font-size:80px;width:49%;" onclick="myLottery()">抽籤</button>
-    <button class="btn btn-info" style="font-size:80px;width:49%;" onclick="myReset()">重設</button>
+    <button class="btn btn-primary" id="b1" style="font-size:80px;width:99%;" onclick="myLottery()">抽籤</button>
     <div class="container" style="width:100%;height:80%;background-color:white;margin-left: auto;margin-right: auto;">
     <div class="row col-md-12 col-sm-12 col-xs-12">
         <table class="table table-striped" id="bingo" style="" frame="hidden" rules="all">
@@ -145,6 +144,7 @@
         </table>
     </div>
     </div>
+    <button class="btn btn-info" style="font-size:80px;width:99%;" onclick="myReset()">重設</button>
     <script>
             window.onload = function() {
                 for (var i = 0; i < 75; i++) {
@@ -193,6 +193,19 @@
                         }
                     }
                 }
+            }
+
+            function getCookie(cname) {
+                var name = cname + "=";
+                var ca = document.cookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) == ' ') c = c.substring(1);
+                    if (c.indexOf(name) == 0) {
+                        return c.substring(name.length, c.length);
+                    }
+                }
+                return "";
             }
     </script>
 </body>
