add bingo array

--- a/bingobingo/bingo75.htm
+++ b/bingobingo/bingo75.htm
@@ -146,10 +146,14 @@
     </div>
     <button class="btn btn-info" style="font-size:80px;width:100%;" onclick="myReset()">重設</button>
     <script>
+            var bingo_array={};
             window.onload = function() {
                 for (var i = 0; i < 75; i++) {
                     if(getCookie("h" + i) != ""){
                         document.getElementsByTagName("td")[i].style.backgroundColor = getCookie("h" + i);
+                        bingo_array[i] = true;
+                    }else{
+                        bingo_array[i] = false;
                     }
                 }
             }
@@ -167,6 +171,7 @@
                 for (i = 0; i < 75; i++) {
                     document.getElementsByTagName("td")[i].style.backgroundColor = "white";
                     document.cookie = "h" + i + "=" + "white";
+                    bingo_array[i] = false;
                 }
                 document.getElementById("b1").innerHTML = "抽籤";
             }
@@ -176,17 +181,18 @@
                     count = 0,
                     r = 0;
                 for (i = 0; i < 75; i++) {
-                    if (document.getElementsByTagName("td")[i].style.backgroundColor != "#ff4d4d") {
+                    if (bingo_array[i] === false) {
                         count++;
                     }
                 }
                 r = Math.floor(Math.random() * count);
                 for (i = 0; i < 75; i++) {
-                    if (document.getElementsByTagName("td")[i].style.backgroundColor != "#ff4d4d") {
+                    if (bingo_array[i] === false) {
                         if (r == 0) {
                             document.getElementsByTagName("td")[i].style.backgroundColor = "#ff4d4d";
                             document.cookie = "h" + i + "=" + "#ff4d4d";
                             document.getElementById("b1").innerHTML = "抽籤(" + (i + 1) + ")";
+                            bingo_array[i] = true;
                             break;
                         } else {
                             r--;
